llvm/test/tools/llubi/noalias_overlapping_ranges.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; Ported from Miri's tests/fail/both_borrows/buggy_split_at_mut.rs:
; two supposedly independent mutable ranges overlap, so writes through both
; protected noalias arguments are rejected.
; RUN: not llubi --experimental-noalias --verbose < %s 2>&1 | FileCheck %s

define void @write_overlap(ptr noalias %a, ptr noalias %b) {
  %a1 = getelementptr [4 x i32], ptr %a, i64 0, i64 1
  store i32 5, ptr %a1
  %b1 = getelementptr [4 x i32], ptr %b, i64 0, i64 1
  store i32 6, ptr %b1
  ret void
}

define void @main() {
  %array = alloca [4 x i32]
  call void @write_overlap(ptr %array, ptr %array)
  ret void
}

; CHECK: Entering function: main
; CHECK-NEXT:   %array = alloca [4 x i32], align 4 => ptr 0x8 [array]
; CHECK-NEXT: Entering function: write_overlap
; CHECK-NEXT:   ptr %a = ptr 0x8 [array]
; CHECK-NEXT:   ptr %b = ptr 0x8 [array]
; CHECK-NEXT: NoAlias: created protector node #1 for 'array' based on raw/root
; CHECK-NEXT: NoAlias: created protector node #2 for 'array' based on raw/root
; CHECK-NEXT:   %a1 = getelementptr [4 x i32], ptr %a, i64 0, i64 1 => ptr 0xC [array + 4]
; CHECK-NEXT: NoAlias: node #1 local write through node #1 on 'array' bytes [4, 8): Reserved -> Unique
; CHECK-NEXT: NoAlias: node #2 foreign write through node #1 on 'array' bytes [4, 8): Reserved -> Disabled
; CHECK-NEXT: NoAlias: write through node #1 on 'array' bytes [4, 8) checked 2 active noalias protectors
; CHECK-NEXT:   store i32 5, ptr %a1, align 4
; CHECK-NEXT:   %b1 = getelementptr [4 x i32], ptr %b, i64 0, i64 1 => ptr 0xC [array + 4]
; CHECK-NEXT: NoAlias: noalias violation: write through node #2 on 'array' bytes [4, 8) is foreign to protected node #1, but that protector is in Unique state
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i32 6, ptr %b1, align 4 at @write_overlap
; CHECK-NEXT: #1   call void @write_overlap(ptr %array, ptr %array) at @main
; CHECK-NEXT: Immediate UB detected: noalias violation: write through node #2 on 'array' bytes [4, 8) is foreign to protected node #1, but that protector is in Unique state
; CHECK-NEXT: error: Execution of function 'main' failed.
